# Internet-Market

./: .gitignore  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py  main_models.py
backend/app/models/: shops_models.py  users_models.py
backend/app/routers/: auth.py  users.py
backend/app/schemas/: auth_schemas.py  shops_shemas.py  users_schema.py
backend/app/services/: auth_service.py  users_service.py
