[tool.poetry]
name = "internet-market"
version = "0.1.0"
description = ""
authors = ["ByP0 <andryhan09@yandex.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
