[tool.poetry]
name = "internet-market"
version = "0.1.0"
description = ""
authors = ["ByP0 <andryhan09@yandex.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
pytest = "^8.3.4"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"
bcrypt = "^4.2.1"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
pydantic = {extras = ["email"], version = "^2.10.2"}
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
